--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
   "author": "Peehal",
   "type": "commonjs",
   "main": "index.js",
- "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node src/app.js",
-  "dev": "nodemon src/app.js"
-}
-,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
+  },
   "dependencies": {
     "@langchain/community": "^1.1.8",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
+    "dotenv": "^16.6.1",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "langchain": "^1.2.14",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "validator": "^13.15.26",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
