--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "license": "ISC",
   "author": "Peehal",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@langchain/community": "^1.1.8",
+    "@langchain/core": "^1.1.19",
+    "@langchain/ollama": "^1.2.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
